--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <main>
             <p id="frase-de-efeito"> <em> "Everyone deserves the chance to fly" </em> </p>
             <h1> Wicked </h1>
+            <p> Um novo paragrafo de teste para o video! </p>
         </main>
 
         <footer>
